--- a/css/base.css
+++ b/css/base.css
@@ -178,7 +178,7 @@ header img {
 	color: #4e015c;
 	text-align: center;
 	padding: 60px 0px;
-    background-image: url(/img/shattered.png);
+    background-image: url(../img/shattered.png);
   background-size: cover;
   position: fixed;
   top: 0;
